trying to ignore stuff that wont go away

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,61 @@ test images/
 old files/
 build/
 dist/
-dist/SplitScreener.app
+
 .vscode/
 .eggs/
+
+dist/SplitScreener.app/Contents/Info.plist
+dist/SplitScreener.app/Contents/MacOS/SplitScreener
+dist/SplitScreener.app/Contents/Resources/__boot__.py
+dist/SplitScreener.app/Contents/Resources/Archivo_SemiExpanded-Light.ttf
+dist/SplitScreener.app/Contents/Resources/btn_render_flatter.png
+dist/SplitScreener.app/Contents/Resources/btn_render.png
+dist/SplitScreener.app/Contents/Resources/defaults.json
+dist/SplitScreener.app/Contents/Resources/fusion_tool_generator.py
+dist/SplitScreener.app/Contents/Resources/icn_fliph_state1.png
+dist/SplitScreener.app/Contents/Resources/icn_fliph_state2.png
+dist/SplitScreener.app/Contents/Resources/icn_fliph_state3.png
+dist/SplitScreener.app/Contents/Resources/icn_flipv_state1.png
+dist/SplitScreener.app/Contents/Resources/icn_flipv_state2.png
+dist/SplitScreener.app/Contents/Resources/icn_flipv_state3.png
+dist/SplitScreener.app/Contents/Resources/icn_link_state1.png
+dist/SplitScreener.app/Contents/Resources/icn_link_state2.png
+dist/SplitScreener.app/Contents/Resources/icn_link_state3.png
+dist/SplitScreener.app/Contents/Resources/icn_rotateccw_state1.png
+dist/SplitScreener.app/Contents/Resources/icn_rotateccw_state2.png
+dist/SplitScreener.app/Contents/Resources/icn_rotateccw_state3.png
+dist/SplitScreener.app/Contents/Resources/icn_rotatecw_state1.png
+dist/SplitScreener.app/Contents/Resources/icn_rotatecw_state2.png
+dist/SplitScreener.app/Contents/Resources/icn_rotatecw_state3.png
+dist/SplitScreener.app/Contents/Resources/icn_trash_state1.png
+dist/SplitScreener.app/Contents/Resources/icn_trash_state2.png
+dist/SplitScreener.app/Contents/Resources/icn_trash_state3.png
+dist/SplitScreener.app/Contents/Resources/lbracket1.png
+dist/SplitScreener.app/Contents/Resources/lbracket2.png
+dist/SplitScreener.app/Contents/Resources/PythonApplet.icns
+dist/SplitScreener.app/Contents/Resources/render_button.png
+dist/SplitScreener.app/Contents/Resources/setup.py
+dist/SplitScreener.app/Contents/Resources/ss_classes.py
+dist/SplitScreener.app/Contents/Resources/SS_icon.png
+dist/SplitScreener.app/Contents/Resources/ss_logo_spaced.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_fliph_state1.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_fliph_state2.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_fliph_state3.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_flipv_state1.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_flipv_state2.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_flipv_state3.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_link_state1.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_link_state2.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_link_state3.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_rotateccw_state1.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_rotateccw_state2.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_rotateccw_state3.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_rotatecw_state1.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_rotatecw_state2.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_rotatecw_state3.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_trash_state1.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_trash_state2.png
+dist/SplitScreener.app/Contents/Resources/icons/icn_trash_state3.png
+dist/SplitScreener.app/Contents/Resources/icons/lbracket1.png
+dist/SplitScreener.app/Contents/Resources/icons/lbracket2.png
